// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) NEG set first (ASSET-in derived) — static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": true,
  "bundle": Object {
    "hash": "0xd314cc0211006262fc708075d23184c5de3ec7c258b634871bd3aba471c2f545",
    "protocol": "mev-share",
  },
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": true,
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": true,
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": true,
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "tokenIn": "0xDc64a140Aa3E981100a9becA4E685f962f0cF6C9",
        "tokenOut": "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707",
      },
    ],
    "userAssetDecrease": "3003600000000000000",
    "userUsdcOut": "2970267621112662249",
  },
  "fees": Object {
    "perHopPools": "1000000000000000",
    "perHopTotal": "1200000000000000",
    "perHopTreasury": "200000000000000",
  },
  "note": "NEG set, ASSET-in. Quote via provider.call; no Contract.swap() arg walker.",
  "orbit": Array [
    "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
    "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
    "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "101001000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "99009910792962445917",
      },
      Object {
        "a": "101001000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "99009910792962445917",
      },
      Object {
        "a": "101001000000000000000",
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "u": "99009910792962445917",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xd8058efe0198ae9dD7D563e1b4938Dcbc86A1F81",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0x6D544390Eb535d61e196c87d6B9c80dCD8628Acd",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xB1eDe3F5AC8654124Cb5124aDf0Fd3885CbDD1F7",
        "u": "100000000000000000000",
      },
    ],
  },
  "role": "MCV — searcher-quote",
  "routerStatic": "2970267621112662249",
  "usingNeg": true,
}
`;

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) POS set first (USDC-in derived) — static == exec; snapshots 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "assetToUsdc": false,
  "bundle": Object {
    "hash": "0x6aa9d082330c2d5530585a633afcb374ec965b02e8e1b1bf9536f12528583b6a",
    "protocol": "mev-share",
  },
  "execution": Object {
    "hops": Array [
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
      Object {
        "amountIn": "1000000000000000000",
        "amountOut": "990089207037554083",
        "assetToUsdc": false,
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "tokenIn": "0xf5059a5D33d5853360D16C683c16e67980206f36",
        "tokenOut": "0x851356ae760d987E095750cCeb3bC6014560891C",
      },
    ],
    "userAssetOut": "2970267621112662249",
  },
  "fees": Object {
    "perHopPools": "1000000000000000",
    "perHopTotal": "1200000000000000",
    "perHopTreasury": "200000000000000",
  },
  "flippedToNegAfter": true,
  "note": "POS-first under dual-orbit; raw provider.call for quote, raw tx for exec.",
  "orbit": Array [
    "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
    "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
    "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
  ],
  "pools": Object {
    "after": Array [
      Object {
        "a": "99009910792962445917",
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "u": "101001000000000000000",
      },
      Object {
        "a": "99009910792962445917",
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "u": "101001000000000000000",
      },
    ],
    "before": Array [
      Object {
        "a": "100000000000000000000",
        "pool": "0xf9b42E09Fd787d6864D6b2Cd8E1350fc93E6683D",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xd468bF477c0c99095D508c3B0A60f39348d91ac0",
        "u": "100000000000000000000",
      },
      Object {
        "a": "100000000000000000000",
        "pool": "0xe481c73B6236153D1dc22E510c51b312CD8E5e3f",
        "u": "100000000000000000000",
      },
    ],
  },
  "role": "MCV — searcher-quote",
  "routerStatic": "2970267621112662249",
  "startWith": "POS",
  "usingNeg": false,
}
`;

exports[`MCV — searcher-style quoting (no Quoter; eth_call only) dual-orbit flips: after first call (NEG/ASSET-in) → POS/USDC-in; static & deltas snapshot 1`] = `
Object {
  "bundleHashes": Object {
    "neg": "0x8ce9f9fbffb3c508761403ead305f47a30cb329059baf2204c06ab4e2bc1a6a0",
    "pos": "0xe025cbfe2193981f201af3d2ee43ac243e38861c44bb92d7fba64ca33093c894",
  },
  "flip": "NEG→POS",
  "hops": 3,
  "lastKnownUserBalances": Object {
    "asset": "100000002970267621112662249",
    "usdc": "100000002970267621112662249",
  },
  "note": "Run #2 after flip — POS, USDC-in. Quote/exec via raw ABI; no argument mutation.",
  "role": "MCV — searcher-quote",
  "routerStatic": "2970267621112662249",
  "usingNegAfterFlip": true,
}
`;
